[gd_scene load_steps=8 format=3 uid="uid://bbshonc4n4flr"]

[ext_resource type="Script" path="res://scenes/levels/level.gd" id="1_7hc3u"]
[ext_resource type="Texture2D" uid="uid://dkerfxhsce7dy" path="res://graphics/Solid_white.png" id="1_vc5fp"]
[ext_resource type="PackedScene" uid="uid://cjumglakoubdj" path="res://scenes/player.tscn" id="2_of53l"]
[ext_resource type="PackedScene" uid="uid://c1fdvjs8y5uob" path="res://scenes/ui.tscn" id="4_ci3kg"]
[ext_resource type="PackedScene" uid="uid://wmpybgi7eany" path="res://scenes/obstacle.tscn" id="5_gqspr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wlmww"]
size = Vector2(908.25, 5.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v3j00"]
size = Vector2(106, 180)

[node name="Level1" type="Node2D"]
script = ExtResource("1_7hc3u")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 645.0
color = Color(0.972549, 0.486275, 0.341176, 1)
metadata/_edit_lock_ = true

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(564, 360)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2(4, -2)
shape = SubResource("RectangleShape2D_wlmww")

[node name="Sprite2D" type="Sprite2D" parent="Floor"]
position = Vector2(4, -2)
scale = Vector2(4.54, 0.03)
texture = ExtResource("1_vc5fp")

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(153, 204)

[node name="End" type="Area2D" parent="."]
position = Vector2(1015, 267)

[node name="CollisionShape2D" type="CollisionShape2D" parent="End"]
position = Vector2(57, -3)
shape = SubResource("RectangleShape2D_v3j00")

[node name="Player" parent="." instance=ExtResource("2_of53l")]
position = Vector2(-58, 272)

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="UI" parent="." instance=ExtResource("4_ci3kg")]

[node name="Obstacle" parent="." instance=ExtResource("5_gqspr")]
position = Vector2(567, 350)
scale = Vector2(2, 0.5)
target_scale_proportion = Vector2(2, 3)

[connection signal="body_entered" from="End" to="." method="_on_end_body_entered"]
[connection signal="was_hit" from="Player" to="." method="_on_player_was_hit"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
